[gd_scene load_steps=4 format=3 uid="uid://c4m8v3taori85"]

[ext_resource type="Script" path="res://src/ui/menus/card_anatomy.gd" id="1_mnact"]
[ext_resource type="Theme" uid="uid://c21dhy264y6ty" path="res://assets/theme_large.tres" id="2_huav5"]
[ext_resource type="StyleBox" uid="uid://bhfo1noi80203" path="res://assets/panel_opaque.tres" id="3_1kca3"]

[node name="CardAnatomy" type="Node2D"]
script = ExtResource("1_mnact")

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_huav5")
theme_override_styles/panel = ExtResource("3_1kca3")

[node name="SeedOrAction" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
offset_left = 200.0
offset_top = 138.0
offset_right = 700.0
offset_bottom = 384.0
theme = ExtResource("2_huav5")
bbcode_enabled = true
text = "This is a Seed card, indicated by the green background. It places seeds on your farm that can be grown and harvested to gain Mana"
fit_content = true

[node name="EnergyCost" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
offset_left = 1200.0
offset_top = 115.0
offset_right = 1700.0
offset_bottom = 197.0
theme = ExtResource("2_huav5")
bbcode_enabled = true
text = "This card costs {cost} energy to play."
fit_content = true

[node name="Size" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
offset_left = 1200.0
offset_top = 356.0
offset_right = 1700.0
offset_bottom = 438.0
theme = ExtResource("2_huav5")
bbcode_enabled = true
text = "This action affects {size} tile(s) on the farm."
fit_content = true

[node name="Enhances" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
offset_left = 1200.0
offset_top = 520.0
offset_right = 1700.0
offset_bottom = 725.0
theme = ExtResource("2_huav5")
bbcode_enabled = true
text = "Enhances: A card can be enhanced two times. Each filled triangle represents an enhance.
This card has 2 enhances."
fit_content = true

[node name="Description" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
offset_left = 200.0
offset_top = 430.0
offset_right = 700.0
offset_bottom = 553.0
theme = ExtResource("2_huav5")
bbcode_enabled = true
text = "Description: Explains the seed's special effects, if it has any."
fit_content = true

[node name="Mana" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
offset_left = 690.0
offset_top = 832.0
offset_right = 1190.0
offset_bottom = 1078.0
theme = ExtResource("2_huav5")
bbcode_enabled = true
text = "This seed will provide {yield} base yield when it is harvested. Since this card plants {size} seeds, the total yield it will produce is {total_yield}"
fit_content = true

[node name="Time" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 0)
offset_left = 1200.0
offset_top = 815.0
offset_right = 1700.0
offset_bottom = 897.0
theme = ExtResource("2_huav5")
bbcode_enabled = true
text = "This seed will take {duration} weeks to grow."
fit_content = true

[node name="Title" type="Label" parent="."]
offset_left = 650.0
offset_right = 1266.0
offset_bottom = 80.0
theme = ExtResource("2_huav5")
theme_override_font_sizes/font_size = 100
text = "Anatomy of a Card"

[node name="Close" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
offset_left = 1712.0
offset_top = 6.0
offset_right = 1912.0
offset_bottom = 106.0
theme = ExtResource("2_huav5")
theme_override_font_sizes/font_size = 80
text = "Close"

[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
